# InquirerBitrix24Bot

./: .env.example  .gitignore  bot.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  test.py
bot/: AVGRUPPservic.session  main.py
bot/sessions/: AVGRUPPservic.session
web/: AVGRUPPservic.session  bot.py  login_bot.py
web/apps/bitrix24/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
web/apps/bitrix24/migrations/: 0001_initial.py  0002_remove_deal_bitrix_deal_id_alter_deal_id.py  0003_alter_deal_user_review.py  0003_scheduledtask.py  0004_deal_is_active.py
web/core/: celery.py  settings.py  urls.py
web/services/: bitrix24.py
